fix scrollbar issue

--- a/css/animal_selector.styl
+++ b/css/animal_selector.styl
@@ -288,7 +288,7 @@
     background: rgba($black, 0.33);
     border-radius: 3px;
     box-shadow: 0 2px 3px rgba($black, 0.5) inset;
-    overflow: auto;
+    overflow: hidden;
 
     .items {
       clearfix();
